--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     body {
       font-family: sans-serif;
       text-align: center;
+      background-color: lightblue;
+      background-image: url(background-image.jpg);
     }
     h1 {
       font-size: 2em;
