--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: sans-serif;
       text-align: center;
-      background-color: lightblue;
+      background-color: green;
       background-image: url(background-image.jpg);
     }
     h1 {
